[gd_scene load_steps=41 format=2]

[ext_resource path="res://main/PalletSwap.gdshader" type="Shader" id=3]
[ext_resource path="res://main/PalletSwap.tres" type="Material" id=4]
[ext_resource path="res://characters/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://characters/Turt.gd" type="Script" id=6]
[ext_resource path="res://art/turtle16.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 7 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 7 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 7 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=1]
resource_local_to_scene = true
animations = [ {
"frames": [ SubResource( 63 ), SubResource( 65 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 64 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="ShaderMaterial" id=22]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/palette = 0
shader_param/palette_length = 4

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 7 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 7 )
region = Rect2( 64, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 7 )
region = Rect2( 80, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 7 )
region = Rect2( 96, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 7 )
region = Rect2( 112, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 7 )
region = Rect2( 128, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 7 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 7 )
region = Rect2( 16, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 7 )
region = Rect2( 32, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 7 )
region = Rect2( 48, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 7 )
region = Rect2( 64, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 7 )
region = Rect2( 80, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 7 )
region = Rect2( 96, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 7 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 7 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 7 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 7 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 7 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 7 )
region = Rect2( 64, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 7 )
region = Rect2( 80, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 7 )
region = Rect2( 96, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 7 )
region = Rect2( 96, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 7 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 7 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=29]
resource_local_to_scene = true
animations = [ {
"frames": [ SubResource( 38 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ) ],
"loop": false,
"name": "dead",
"speed": 10.0
}, {
"frames": [ SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ) ],
"loop": false,
"name": "decay",
"speed": 10.0
}, {
"frames": [ SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ) ],
"loop": false,
"name": "defend",
"speed": 5.0
}, {
"frames": [ SubResource( 66 ), SubResource( 67 ), SubResource( 66 ), SubResource( 66 ), SubResource( 66 ), SubResource( 66 ), SubResource( 66 ), SubResource( 68 ), SubResource( 69 ), SubResource( 68 ), SubResource( 66 ), SubResource( 66 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 58 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[node name="Trut" instance=ExtResource( 5 )]
script = ExtResource( 6 )

[node name="Head" type="AnimatedSprite" parent="." index="0"]
material = ExtResource( 4 )
frames = SubResource( 1 )
animation = "idle"

[node name="AnimatedSprite" parent="." index="1"]
material = SubResource( 22 )
frames = SubResource( 29 )
animation = "defend"
frame = 3

[node name="DefendTimer" type="Timer" parent="." index="7"]
wait_time = 3.0
one_shot = true

[node name="DefendCooldown" type="Timer" parent="." index="8"]
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="DefendTimer" to="." method="_on_DefendTimer_timeout"]
[connection signal="timeout" from="DefendCooldown" to="." method="_on_DefendCooldown_timeout"]
